--- a/pages/pages.css
+++ b/pages/pages.css
@@ -87,4 +87,140 @@ body.modal-open {
   animation: float 2s infinite alternate;
 }
 
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 colonnes par défaut */
+  gap: 2rem;
+  padding: 2rem;
+  justify-items: center; /* centre les cartes dans leur colonne */
+}
 
+@media (max-width: 1024px) {
+  .cards-container {
+    grid-template-columns: repeat(2, 1fr); /* 2 colonnes sur tablette */
+  }
+}
+
+@media (max-width: 600px) {
+  .cards-container {
+    grid-template-columns: 1fr; /* 1 colonne sur mobile */
+  }
+}
+
+.card {
+  width: 250px;
+  height: 350px;
+  perspective: 1000px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+}
+
+.card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  backface-visibility: hidden;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+}
+
+.card-front {
+  background: url("../images/card_dos.webp") center/cover;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0 2px 5px rgba(0,0,0,0.7);
+}
+
+.card-back {
+  background: #fff3c6;
+  transform: rotateY(180deg);
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 2px solid #38bdf8;
+}
+
+.card-back h3 {
+  margin: 0;
+}
+
+.card-back a {
+  background: #38bdf8;
+  color: #fff3c6;
+  padding: 0.5rem;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background 0.3s;
+}
+
+.card-back a:hover {
+  background: #0ea5e9;
+}
+
+.timeline {
+  position: relative;
+  margin: 2rem 0;
+  padding-left: 40px;
+  border-left: 3px solid #38bdf8;
+}
+
+.timeline-step {
+  position: relative;
+  margin-bottom: 2.5rem;
+  opacity: 0;
+  transform: translateX(-50px);
+  transition: all 0.6s ease-out;
+}
+
+.timeline-step.active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.timeline-point {
+  position: absolute;
+  left: -12px;
+  top: 0;
+  width: 24px;
+  height: 24px;
+  background-color: #38bdf8;
+  border-radius: 50%;
+  border: 3px solid #fff;
+}
+
+.timeline-content {
+  background: #fff3c6;
+  padding: 1rem;
+  border-radius: 10px;
+  color: black;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+.about-me {
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+    background: #fff3c6;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
