--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
 
+.navbar {
+  position: fixed;   
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  border-bottom: 2px solid #333;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding: 15px 0;
+  z-index: 1000;
+}
+
+.navbar a {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  text-decoration: none;
+  color: #333;
+  transition: color 0.3s;
+}
+
+.navbar a:hover {
+  color: #4f46e5; 
+}
+
 * { box-sizing: border-box; margin:0; padding:0; }
 body {
   font-family: 'Poppins', sans-serif;
@@ -10,6 +36,7 @@ body {
   justify-content: flex-start;
   overflow-x: hidden;
   position: relative;
+  padding-top: 50px;
 }
 
 
@@ -77,3 +104,4 @@ body {
   font-family: 'Patrick Hand', cursive;
   text-align: center;
 }
+
